--- a/client/src/features/dashboard/dashboard.css
+++ b/client/src/features/dashboard/dashboard.css
@@ -20,10 +20,23 @@
 
 #create-new-topic form{
     margin: 1rem;
-    width: 50%;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 #create-new-topic button{
     border: none;
+    margin-top: 1rem;
+}
+
+textarea{
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+#create-new-topic form > *{
+    margin-bottom: 1rem;
     margin-top: 1rem;
 }
