--- a/client/src/features/posts/post/post.css
+++ b/client/src/features/posts/post/post.css
@@ -1,10 +1,17 @@
 .post-inner-text{
-    background: #f9f9f9;
-    margin-top: 2rem;
     padding: 1rem;
-    border-radius: 10px
+    border-radius: 10px;
+}
+
+.hr-post{
+    margin-top: 2rem;
+    color: #ffffff5e;
 }
 
 .post-info{
     display: none;
+}
+
+.post-title{
+    cursor: pointer;
 }
