--- a/client/src/features/dashboard/dashboard.css
+++ b/client/src/features/dashboard/dashboard.css
@@ -35,6 +35,7 @@ textarea{
     display: block;
     margin: 0 auto;
     border-radius: 10px;
+    border: 1px solid gray;
 }
 
 #create-new-topic form > *{
