--- a/client/src/features/posts/post/post.css
+++ b/client/src/features/posts/post/post.css
@@ -27,3 +27,24 @@
     color: #584c84;
     font-family: 'Montserrat', sans-serif;
 }
+
+.add-reply-button{
+    padding: 1rem;
+    border-radius: 10px;
+    margin: 1rem auto;
+}
+
+.reply-text{
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    white-space: pre-wrap; 
+}
+
+.textarea-reply{
+    width: 100%;
+    height: 20vh;
+}
+
+.reply-form{
+    display: none;
+}
